# fish-feeder

./: .gitignore  fish_feeder.service  pyproject.toml  readme.md  version.py
fish_feeder/: __init__.py  api.py  database.py  device.py  scheduler.py  settings.py  web_app.py
fish_feeder/abstract/: __init__.py
fish_feeder/templates/: base.html  edit-daily-schedule.html
static/: styles.css
templates/: base.html  settings.html  status.html
tests/: test_fish_feeder.py
