[tool.poetry]
name = "fish-feeder"
version = "0.1.0"
description = ""
authors = ["Kenny Baskett <kbaskett248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
Jinja2 = "^2.11.3"
uvicorn = "^0.13.3"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
