[tool.poetry]
name = "fish-feeder"
version = "0.1.0"
description = ""
authors = ["Kenny Baskett <kbaskett248@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.63.0"
Jinja2 = "^2.11.3"
uvicorn = "^0.13.3"
pydantic = {extras = ["dotenv"], version = "^1.7.3"}
gpiozero = "^1.5.1"
SQLAlchemy = "^1.3.23"
aiofiles = "^0.6.0"
python-multipart = "^0.0.5"
typer = {extras = ["all"], version = "^0.3.2"}
APScheduler = {extras = ["asyncio", "sqlalchemy"], version = "^3.7.0"}
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.800"

[tool.poetry.scripts]
fish-feeder = "fish_feeder:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
